Add downloading pdf files